# TradeRL

./: LICENSE  README.md  pyproject.toml  requirements.txt
src/trade_rl/: crypto_trade.py  test.py  train.py
src/trade_rl/agents/: config.py  drl_agent.py  utils.py
src/trade_rl/meta/: config.py  constants.py  data_processor.py  test.ipynb
src/trade_rl/meta/crypto/: alpaca_paper_trade_multicrypto.py  env_bitcoin.py  env_multiple_crypto.py
src/trade_rl/meta/data_processors/: _base.py  alpaca.py  alpaca_crypto.py  binance.py  ccxt.py  yahoofinance.py
src/trade_rl/meta/stock/: env_stock_papertrading.py  env_stock_trading.py  env_stocktrading_stoploss.py
src/trade_rl/playground/: crypto_trade.ipynb  crypto_trade.py
tests/: test_trade_rl.py
