[tool.poetry]
name = "trade-rl"
version = "0.1.0"
description = ""
authors = ["18heim <christopher.heim@mines-paristech.fr>"]
packages = [{ include = "trade_rl", from = "src" }]
license = "MIT license"

[tool.poetry.dependencies]
python = "^3.8"
alpaca-trade-api = "^2.3.0"
yfinance = "^0.1.77"
stockstats = "^0.4.1"
ccxt = "^2.0.6"
pandas = "^1.5.0"
exchange-calendars = "^4.2.3"
trading-calendars = "^2.1.1"
setuptools = "^65.5.0"
ipykernel = "^6.16.0"
flake8 = "^5.0.4"
black = "^22.10.0"
isort = "^5.10.1"
torch = "^1.12.1"
stable-baselines3 = "^1.6.2"
omegaconf = "^2.2.3"
pydantic = "^1.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
skip = [".gitignore", ".dockerignore"]
extend_skip = [".md", ".json"]
include_trailing_comma = true
known_first_party = "trade_rl"
line_length = 88
multi_line_output = 3
src_paths = ["src", "tests"]